# issi_FastAPIProject

./: .gitignore  README.md  app_movies_orm.py  app_movies_pure_sql.py  ensure_movies_db_exists.py  main.py  movies-extended.db.template  movies.db  movies.db.template  movies_orm.py  movies_storage.py  orm_models.py  pyproject.toml  test_basic_endpoints.py  test_main.http  test_main.py  test_orm.py  test_pure_sql.py
.github/workflows/: lint_and_test.yml
tmp/: movies_test_orm.db  movies_test_pure.db
