[project]
name = "issi_fastapiproject"
version = "0.1.0"
description = "A FastAPI project for movie storage"
dependencies = [
    "fastapi[standard]",
    "peewee",
    "requests",
]
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "uvicorn",
    "pylint",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pylint]
ignore = [".venv"]
max-line-length = 120
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
]
